--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-spinners": "^0.15.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "svix": "^1.57.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
