--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@clerk/nextjs": "^6.11.3",
     "@clerk/themes": "^2.2.18",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
