--- a/package.json
+++ b/package.json
@@ -4,22 +4,20 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build && tsc --project tsconfig.server.json",
-    "check": "next lint && tsc --noEmit",
+    "build": "next build",
+    "check": "next lint",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "dev": "node server.ts",
-    "dev:": "next dev --turbo",
+    "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate && prisma db push",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
-    "start": "node dist/server.js",
-    "start:": "next start",
+    "start": "next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
