--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,6 @@
     "lib": ["dom", "dom.iterable", "ES2022"],
     "noEmit": true,
     "module": "ESNext",
-    // "moduleResolution": "node",
     "moduleResolution": "Bundler",
     "jsx": "preserve",
     "plugins": [{ "name": "next" }],
@@ -38,7 +37,7 @@
     "**/*.cjs",
     "**/*.js",
     ".next/types/**/*.ts",
-    "server.ts"
+    "server.mts"
   ],
   "exclude": ["node_modules"]
 }
