--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.475.0",
     "nanoid": "^5.1.0",
     "next": "^15.0.1",
+    "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.15.0",
